[gd_scene load_steps=19 format=3 uid="uid://dhy01qy7khi6"]

[ext_resource type="Script" path="res://puzzles_act_2_chalice_puzzle/chalice_puzzle/scripts/statue.gd" id="1_6fwq6"]
[ext_resource type="AudioStream" uid="uid://dbv4gg21xljrg" path="res://audio/sfx/magic_book/Drag_Statue_02.wav" id="2_gyu8u"]
[ext_resource type="Theme" uid="uid://cjnweyhuaw0k" path="res://themes/prompt_theme.tres" id="3_ky02j"]
[ext_resource type="Texture2D" uid="uid://y5mvclec1mn3" path="res://resource/assets/rooms/Corridoio/vaso01.png" id="4_y2q8n"]
[ext_resource type="Texture2D" uid="uid://bgehbrjiylf8f" path="res://resource/assets/rooms/Corridoio/Asset nuovi/bastone.png" id="5_ouyiy"]
[ext_resource type="Texture2D" uid="uid://dr0xe0m16ja0t" path="res://resource/assets/rooms/Corridoio/Asset nuovi/infinito.png" id="6_ovt01"]
[ext_resource type="Texture2D" uid="uid://vbqqa26wespu" path="res://resource/assets/rooms/Corridoio/Asset nuovi/occhio.png" id="7_5c1m6"]
[ext_resource type="Texture2D" uid="uid://qdrweudkp43w" path="res://resource/assets/rooms/Corridoio/Asset nuovi/piramidi.png" id="8_hj0ga"]
[ext_resource type="PackedScene" uid="uid://bp55k82sv4ufj" path="res://interactable/interactable.tscn" id="9_ye0sn"]
[ext_resource type="PackedScene" uid="uid://boxt3d6gkh840" path="res://global/global_trigger_system/node_toggle/node_toggle.tscn" id="10_qo6qf"]
[ext_resource type="Script" path="res://requirement/scripts/requirement.gd" id="11_jblq5"]
[ext_resource type="PackedScene" uid="uid://cxrfji6xsmwwg" path="res://highlight_component/highlight_component.tscn" id="12_7ut10"]
[ext_resource type="Material" uid="uid://ddcloj184m4dm" path="res://shaders/shader_outline_aura.tres" id="13_yxjee"]

[sub_resource type="CircleShape2D" id="CircleShape2D_edqau"]
radius = 164.049

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bdh4k"]
size = Vector2(88, 116)

[sub_resource type="Resource" id="Resource_iy18g"]
script = ExtResource("11_jblq5")
key = "second_boss_call"
value = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e04aj"]
size = Vector2(87, 116)

[sub_resource type="CircleShape2D" id="CircleShape2D_8gj46"]
radius = 163.003

[node name="Statue" type="Node2D"]
script = ExtResource("1_6fwq6")
audio_sfx = ExtResource("2_gyu8u")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -57.0
offset_top = -115.0
offset_right = 68.0
offset_bottom = -69.0
theme = ExtResource("3_ky02j")
text = "Interact"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Vaso" type="Sprite2D" parent="StaticBody2D"]
texture = ExtResource("4_y2q8n")

[node name="statue front" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(0, 10)
texture = ExtResource("5_ouyiy")
region_rect = Rect2(131.046, 130.363, 29.39, 30.7895)

[node name="statue back" type="Sprite2D" parent="StaticBody2D"]
visible = false
position = Vector2(1, 11)
texture = ExtResource("6_ovt01")
region_rect = Rect2(101, -5, 27, 35)

[node name="statue left" type="Sprite2D" parent="StaticBody2D"]
visible = false
position = Vector2(0, 8)
texture = ExtResource("7_5c1m6")
region_rect = Rect2(26, 193, 25, 31)

[node name="statue right" type="Sprite2D" parent="StaticBody2D"]
visible = false
position = Vector2(0, 9)
texture = ExtResource("8_hj0ga")
region_rect = Rect2(170, 65, 29, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
visible = false
shape = SubResource("CircleShape2D_edqau")
disabled = true

[node name="Interactable" parent="." instance=ExtResource("9_ye0sn")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(-3, 48)
shape = SubResource("RectangleShape2D_bdh4k")

[node name="NodeToggle" parent="Interactable" instance=ExtResource("10_qo6qf")]
position = Vector2(-4, 0)
trigger = SubResource("Resource_iy18g")

[node name="HighlightComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("12_7ut10")]
sprite = NodePath("../StaticBody2D/Vaso")
shader = ExtResource("13_yxjee")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighlightComponent"]
position = Vector2(-2.5, 48)
shape = SubResource("RectangleShape2D_e04aj")

[node name="PreArea" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("12_7ut10")]
highlight_color = Color(1, 1, 1, 0.364706)
sprite = NodePath("../StaticBody2D/Vaso")
shader = ExtResource("13_yxjee")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PreArea"]
position = Vector2(0, 42)
shape = SubResource("CircleShape2D_8gj46")

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="player_enter" from="Interactable" to="." method="_on_interactable_player_enter"]
[connection signal="player_exit" from="Interactable" to="." method="_on_interactable_player_exit"]
